Add VAD-gated noise suppression for keyboard filtering
- Use @jitsi/rnnoise-wasm to get VAD score from RNNoise
- Gate audio: silence when VAD < 85%, pass denoised when >= 85%
- Completely eliminates keyboard clicks when not speaking
- Falls back to previous implementations if VAD fails

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"@jitsi/rnnoise-wasm": "^0.2.1",
 		"@sapphi-red/web-noise-suppressor": "^0.3.5",
 		"@shiguredo/noise-suppression": "^2025.1.0",
 		"partysocket": "^1.1.6"
